# legal_env

./: .gitignore  Dockerfile  README.md  api.py  baseline.py  grader.py  inference.py  models.py  openenv.yaml  overhaul_test.txt  pyproject.toml  requirements.txt  sample_contract.txt  server_log.txt  test_dataset.py  test_format.py  test_results.txt  test_results_cmd.txt  test_results_v2.txt
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  icons.tsx  styles.css
frontend/src/components/: VideoBackground.tsx
server/: analyzer.py  app.py  env.py
