[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "legal_env"
version = "0.1.0"
description = "Legal Document Risk Analyzer: A production-grade OpenEnv environment for legal contract analysis."
readme = "README.md"
authors = [
    { name = "Developer", email = "dev@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.40.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:launch"

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
